[package]
name = "loki_weave"
version = "0.1.0"
edition = "2024"
license="MIT"
repository="https://github.com/roquess/loki_weave"
description="Weave once, format everywhere."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"
quick-xml = { version = "0.39", features = ["serialize"] }
